--- a/tlp.conf
+++ b/tlp.conf
@@ -7,32 +7,29 @@ MAX_LOST_WORK_SECS_ON_AC=60
 MAX_LOST_WORK_SECS_ON_BAT=60
 CPU_SCALING_GOVERNOR_ON_AC=powersave
 CPU_SCALING_GOVERNOR_ON_BAT=powersave
-CPU_ENERGY_PERF_POLICY_ON_AC=power
-CPU_ENERGY_PERF_POLICY_ON_BAT=power
+CPU_ENERGY_PERF_POLICY_ON_AC=balance_power
+CPU_ENERGY_PERF_POLICY_ON_BAT=balance_power
+CPU_MIN_PERF_ON_AC=0
+CPU_MAX_PERF_ON_AC=30
+CPU_MIN_PERF_ON_BAT=0
+CPU_MAX_PERF_ON_BAT=30
 CPU_BOOST_ON_AC=0
 CPU_BOOST_ON_BAT=0
+CPU_HWP_DYN_BOOST_ON_AC=0
+CPU_HWP_DYN_BOOST_ON_BAT=0
 SCHED_POWERSAVE_ON_AC=1
 SCHED_POWERSAVE_ON_BAT=1
-NMI_WATCHDOG=0
+PLATFORM_PROFILE_ON_AC=low-power
+PLATFORM_PROFILE_ON_BAT=low-power
 DISK_APM_LEVEL_ON_AC="128 128"
 DISK_APM_LEVEL_ON_BAT="128 128"
 SATA_LINKPWR_ON_AC="med_power_with_dipm min_power"
 SATA_LINKPWR_ON_BAT="med_power_with_dipm min_power"
-AHCI_RUNTIME_PM_ON_AC=on
-AHCI_RUNTIME_PM_ON_BAT=on
-AHCI_RUNTIME_PM_TIMEOUT=15
-RADEON_POWER_PROFILE_ON_AC=default
-RADEON_POWER_PROFILE_ON_BAT=default
+AHCI_RUNTIME_PM_ON_AC=auto
+AHCI_RUNTIME_PM_ON_BAT=auto
 RADEON_DPM_STATE_ON_AC=battery
 RADEON_DPM_STATE_ON_BAT=battery
-RADEON_DPM_PERF_LEVEL_ON_AC=auto
-RADEON_DPM_PERF_LEVEL_ON_BAT=auto
 WIFI_PWR_ON_AC=on
 WIFI_PWR_ON_BAT=on
-SOUND_POWER_SAVE_ON_AC=1
-SOUND_POWER_SAVE_ON_BAT=1
-SOUND_POWER_SAVE_CONTROLLER=Y
-BAY_POWEROFF_ON_AC=0
-BAY_POWEROFF_ON_BAT=0
 RUNTIME_PM_ON_AC=auto
 RUNTIME_PM_ON_BAT=auto
